kubernetes/apps/ai/toolhive/config/httproute.yaml
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 406"]
spec:
  hostnames: ["${HOSTNAME}"]
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
---
# yaml-language-server: $schema=https://crd.movishell.pl/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
  annotations:
    gatus.home-operations.com/endpoint: |-
      conditions: ["[STATUS] == 406"]
spec:
  hostnames: ["mcp.${PRIVATE_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
